csrc/tests/codegen_probes/errors/err_sub_return_type.bas
' REJECT: a SUB with a return-type definition.
' zxbparser p_function_def_header:2995 "SUBs cannot have a return type definition".
Sub s As Byte
End Sub
s()
